toolbelt restock now has to be done manually

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -343,6 +343,14 @@ basic_hammer/obsidian.name=Hammer
 basic_hammer/obsidian.prefix=Obsidian
 
 ###############################
+# TOOLBELT MISC
+###############################
+toolbelt.full=Toolbelt is full
+toolbelt.binding.group=Tetra toolbelt
+toolbelt.binding.access=Quick access
+toolbelt.binding.restock=Restock
+
+###############################
 # TOOLBELT BELT
 ###############################
 toolbelt_belt0.name=Woolen sash
