fix cascading gen issue for geodes, added config for disabling generation

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -22,6 +22,10 @@ item.rocket_boots.name=Rocket boots
 ###############################
 # GEODE
 ###############################
+tetra.general.geode_generate=Generate geodes
+tetra.general.geode_generate.tooltip=Toggle off to disable generation of geodes. Already generated chunks may still contain geodes. §oRequires restart.§r
+tetra.general.geode_contents=Geode contents
+tetra.general.geode_contents.tooltip=Configure which items may be found when breaking a geode. Config values should be entered in groups of 3: itemId, maxCount, weight, where maxCount is the maximum amount that can be found when breaking a geode, and weight affects the probability that this item will be found.
 item.geode.name=Geode
 item.geode.tooltip=Breaking open at a workbench may yield valuable minerals
 item.geode.label=crack open
