added flint variants of basic blade, shortblade, pickaxe and axe

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -104,6 +104,8 @@ basic_blade/diorite=Diorite blade
 basic_blade/diorite.prefix=Diorite
 basic_blade/andesite=Andesite blade
 basic_blade/andesite.prefix=Andesite
+basic_blade/flint=Flint blade
+basic_blade/flint.prefix=Flint
 basic_blade/iron=Iron blade
 basic_blade/iron.prefix=Iron
 basic_blade/gold=Golden blade
@@ -174,6 +176,9 @@ short_blade/acacia=Acacia shortblade
 short_blade/acacia.prefix=Acacia
 short_blade/dark_oak=Oak shortblade
 short_blade/dark_oak.prefix=Oak
+short_blade/flint=Flint shortblade
+short_blade/flint.prefix=Flint
+short_blade/flint.name=Dagger
 short_blade/iron=Iron shortblade
 short_blade/iron.prefix=Iron
 short_blade/iron.name=Dagger
@@ -277,6 +282,9 @@ basic_axe/oak.prefix=Oak
 basic_axe/cobblestone=Stone axe
 basic_axe/cobblestone.name=Axe
 basic_axe/cobblestone.prefix=Cobblestone
+basic_axe/flint=Flint axe
+basic_axe/flint.name=Axe
+basic_axe/flint.prefix=Flint
 basic_axe/iron=Iron axe
 basic_axe/iron.name=Axe
 basic_axe/iron.prefix=Iron
@@ -301,6 +309,9 @@ basic_pickaxe/oak.prefix=Oak
 basic_pickaxe/cobblestone=Stone pick
 basic_pickaxe/cobblestone.name=Pickaxe
 basic_pickaxe/cobblestone.prefix=Cobblestone
+basic_pickaxe/flint=Flint pick
+basic_pickaxe/flint.name=Pickaxe
+basic_pickaxe/flint.prefix=Flint
 basic_pickaxe/iron=Iron pick
 basic_pickaxe/iron.name=Pickaxe
 basic_pickaxe/iron.prefix=Iron
