fixed faulty localization

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -214,18 +214,18 @@ heavy_blade_schema.slot1=Blade material
 
 sword/heavy_blade.name=Greatsword
 
-heavy_blade/oak=Heavy oaken blade
-heavy_blade/oak.prefix=oaken
-heavy_blade/spruce=Heavy spruce blade
-heavy_blade/spruce.prefix=spruce
-heavy_blade/birch=Heavy birch blade
-heavy_blade/birch.prefix=birch
-heavy_blade/jungle=Heavy jungle blade
-heavy_blade/jungle.prefix=jungle
-heavy_blade/acacia=Heavy acacia blade
-heavy_blade/acacia.prefix=acacia
-heavy_blade/dark_oak=Heavy oaken blade
-heavy_blade/dark_oak.prefix=oaken
+heavy_blade/oak_log=Heavy oaken blade
+heavy_blade/oak_log.prefix=oaken
+heavy_blade/spruce_log=Heavy spruce blade
+heavy_blade/spruce_log.prefix=spruce
+heavy_blade/birch_log=Heavy birch blade
+heavy_blade/birch_log.prefix=birch
+heavy_blade/jungle_log=Heavy jungle blade
+heavy_blade/jungle_log.prefix=jungle
+heavy_blade/acacia_log=Heavy acacia blade
+heavy_blade/acacia_log.prefix=acacia
+heavy_blade/dark_oak_log=Heavy oaken blade
+heavy_blade/dark_oak_log.prefix=oaken
 heavy_blade/iron=Heavy iron cleaver
 heavy_blade/iron.prefix=iron
 heavy_blade/cobblestone=Heavy stone blade
