--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -328,6 +328,80 @@ counterweight/fierymetal=Fierymetal counterweight §7VI
 counterweight/knightmetal=Knightmetal counterweight §7IV
 
 ###############################
+# REINFORCED FULLER
+###############################
+reinforced_fuller_schema.name=Reinforce fuller
+reinforced_fuller_schema.description=Reinforce the fuller using the given material. Provides additional integrity and reduces the chance for the item to take damage (Unbreaking I) but makes the sword heavier and slower to swing.
+reinforced_fuller_schema.slot1=Material
+
+reinforced_fuller/oak=Oak reinforced fuller
+reinforced_fuller/spruce=Spruce reinforced fuller
+reinforced_fuller/birch=Birch reinforced fuller
+reinforced_fuller/jungle=Jungle reinforced fuller
+reinforced_fuller/acacia=Acacia reinforced fuller
+reinforced_fuller/dark_oak=Dark oak reinforced guard
+reinforced_fuller/cobblestone=Cobblestone reinforced fuller
+reinforced_fuller/stone=Stone reinforced fuller
+reinforced_fuller/granite=Granite reinforced fuller
+reinforced_fuller/diorite=Diorite reinforced fuller
+reinforced_fuller/andesite=Andesite reinforced fuller
+reinforced_fuller/iron=Iron reinforced fuller
+reinforced_fuller/flint=Flint reinforced fuller
+reinforced_fuller/gold=Gold reinforced fuller
+reinforced_fuller/diamond=Diamond reinforced fuller
+reinforced_fuller/obsidian=Obsidian reinforced fuller
+reinforced_fuller/copper=Copper reinforced fuller
+reinforced_fuller/tin=Tin reinforced fuller
+reinforced_fuller/silver=Silver reinforced fuller
+reinforced_fuller/nickel=Nickel reinforced fuller
+reinforced_fuller/lead=Lead reinforced fuller
+reinforced_fuller/bronze=Bronze reinforced fuller
+reinforced_fuller/electrum=Electrum reinforced fuller
+reinforced_fuller/steel=Steel reinforced fuller
+reinforced_fuller/thaumium=Thaumium reinforced fuller
+reinforced_fuller/ironwood=Ironwood reinforced fuller
+reinforced_fuller/steeleaf=Steeleaf reinforced fuller
+reinforced_fuller/fierymetal=Fierymetal reinforced fuller
+reinforced_fuller/knightmetal=Knightmetal reinforced fuller
+
+###############################
+# REINFORCED BOLSTER
+###############################
+reinforced_bolster_schema.name=Reinforce bolster
+reinforced_bolster_schema.description=Reinforce the bolster using the given material, providing additional integrity at the cost of slower swing speed.
+reinforced_bolster_schema.slot1=Material
+
+reinforced_bolster/oak=Oak reinforced bolster
+reinforced_bolster/spruce=Spruce reinforced bolster
+reinforced_bolster/birch=Birch reinforced bolster
+reinforced_bolster/jungle=Jungle reinforced bolster
+reinforced_bolster/acacia=Acacia reinforced bolster
+reinforced_bolster/dark_oak=Dark oak reinforced guard
+reinforced_bolster/cobblestone=Cobblestone reinforced bolster
+reinforced_bolster/stone=Stone reinforced bolster
+reinforced_bolster/granite=Granite reinforced bolster
+reinforced_bolster/diorite=Diorite reinforced bolster
+reinforced_bolster/andesite=Andesite reinforced bolster
+reinforced_bolster/iron=Iron reinforced bolster
+reinforced_bolster/flint=Flint reinforced bolster
+reinforced_bolster/gold=Gold reinforced bolster
+reinforced_bolster/diamond=Diamond reinforced bolster
+reinforced_bolster/obsidian=Obsidian reinforced bolster
+reinforced_bolster/copper=Copper reinforced bolster
+reinforced_bolster/tin=Tin reinforced bolster
+reinforced_bolster/silver=Silver reinforced bolster
+reinforced_bolster/nickel=Nickel reinforced bolster
+reinforced_bolster/lead=Lead reinforced bolster
+reinforced_bolster/bronze=Bronze reinforced bolster
+reinforced_bolster/electrum=Electrum reinforced bolster
+reinforced_bolster/steel=Steel reinforced bolster
+reinforced_bolster/thaumium=Thaumium reinforced bolster
+reinforced_bolster/ironwood=Ironwood reinforced bolster
+reinforced_bolster/steeleaf=Steeleaf reinforced bolster
+reinforced_bolster/fierymetal=Fierymetal reinforced bolster
+reinforced_bolster/knightmetal=Knightmetal reinforced bolster
+
+###############################
 # SHORTBLADE
 ###############################
 short_blade_schema.name=Shortblade
